# Dream.os

./: .coveragerc  .gitattributes  .gitignore  DREAMSCAPE_AUTOMATION_SETUP.md  DREAMSCAPE_EXTRACTION_PLAN.md  DREAMSCAPE_VISION.md  DreamOsMainWindow_full.py  FINAL_IMPLEMENTATION_SUMMARY.md  FULL_SYNC_CHECKLIST.md  ORCHESTRATION_SUMMARY.md  README-cursor-state.md  README-debugging-solution.md  README-debugging.md  README-metrics-visualization.md  README.md  SIMULATION_SUMMARY.md  __init__.py  auto_queue_improvements.py  autonomous_loop.py  changelog.md  chatgpt_project_context.json  cleanup.py  code_metrics.py  commit_message.txt  config.json  conftest.py  cursor_dispatcher.py  cursor_state_setup.py  debug_and_run.py  debug_app.py  debug_imports.py  debug_pyqt.py  demo_orchestration.py  dependency_cache.json  dependency_dashboard.py  diagnostic_qt.py  dreamscape_automation.py  fixed_app.py  fixed_qt_app.py  generate_jinja_templates.py  (+49 more)
chat_mate/: .gitignore  CursorExecutionTab.py  PACKAGE_README.md  ProjectScanner.py  README.md  __init__.py  analyze_test_coverage.py  auto_test_maker.py  chat_mate.py  chat_mate_config.py  chatgpt_project_context.json  cleanup_sip_imports.py  code_metrics.py  commit_message.txt  config.json  cursor_dispatcher.py  dependency_cache.json  discord_manager_config.json  docker-compose.yml  dreamscape_automation.py  fix_pyqt_sip.py  generate_dependency_graph.py  generate_missing_tests.py  install_dev.py  main.py  memory_data.json  overnight_test_generator.py  pyproject.toml  pytest.ini  requirements.txt  run_community_builder.py  run_pyqt_app.py  (+12 more)
(+6396 files in other folders)
